[tool.poetry]
name = "electrochem"
version = "0.1.0"
description = ""
authors = ["Ryan Dwyer <ryanpdwyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyVISA = "^1.11.3"
json-tricks = "^3.15.5"
numpy = "^1.20.2"
matplotlib = "^3.4.2"
PySimpleGUI = "^4.40.0"
munch = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
